Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68066

QDeclarativeNavigator does not call `QNavigationManager::start()` in setActive(true)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.11.0
    • 5.11.0, 5.11
    • Location
    • None

      `QDeclarativeNavigator` does not start after calling `setActive(true)`. The expected behavior is for it to call `QNavigationManager::start()` once all pre-required conditions apply.

        For Gerrit Dashboard: QTBUG-68066
        # Subject Branch Project Status CR V

            brunoabinader Bruno de Oliveira Abinader
            brunoabinader Bruno de Oliveira Abinader
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes