Let QDeclarativeNavigator::{start,stop} update m_active

QDeclarativeNavigator should call QNavigatorManager::start() inside
QDeclarativeNavigator::start(), however because we were already updating
m_active in QDeclarativeNavigator::setActive(), the call for
QNavigationManager::start() never happens.

Task-number: QTBUG-68066
Change-Id: I486381fdec7fc77ac977ee46683fabd2465cf799
Reviewed-by: Paolo Angelelli <paolo.angelelli@qt.io>